--- a/cup_of_tea/Base.lproj/Main.storyboard
+++ b/cup_of_tea/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="H1p-Uh-vWS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="H1p-Uh-vWS">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -566,6 +566,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
+                                    <action selector="BtnPressed:" destination="ufp-lF-C0Z" eventType="touchUpInside" id="olT-Ho-HaL"/>
                                     <segue destination="XYJ-9Y-eox" kind="showDetail" id="dfr-Ot-jNe"/>
                                 </connections>
                             </button>
@@ -1269,11 +1270,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="album_icon" width="200" height="200"/>
-        <image name="bt_female" width="74" height="90"/>
-        <image name="bt_male" width="74" height="91"/>
-        <image name="camera_icon" width="256" height="256"/>
-        <image name="coffee_icon" width="256" height="256"/>
+        <image name="album_icon" width="400" height="400"/>
+        <image name="bt_female" width="149" height="181"/>
+        <image name="bt_male" width="149" height="182"/>
+        <image name="camera_icon" width="512" height="512"/>
+        <image name="coffee_icon" width="512" height="512"/>
         <image name="imageView:aH8-uL-zCI:image" width="300" height="300">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGVVZYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK8QEgcI
@@ -7383,8 +7384,8 @@ JAAFgyYABYMrAAWDMwAFlJ8ABZShAAWUpgAFlLQABZS4AAWUvwAFlMQABZTRAAWU1AAFlOEABZTmAAWU
 HQ
 </mutableData>
         </image>
-        <image name="male" width="136" height="137"/>
-        <image name="profile_picture_placeholder" width="300" height="300"/>
+        <image name="male" width="68" height="68.5"/>
+        <image name="profile_picture_placeholder" width="600" height="600"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="yDn-nF-oii"/>
